account history view adjustments

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6272,3 +6272,7 @@ div.table-responsive > div.dataTables_wrapper > div.row > div[class^=col-]:last-
   font-style: italic;
 }
 
+.reconcile {
+  cursor: pointer;
+}
+
