schedule list improvements

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -6221,6 +6221,10 @@ table.text-center th {
   font-style: italic;
 }
 
+.cell-no-break {
+  white-space: nowrap;
+}
+
 .reconcile {
   cursor: pointer;
 }
