[fix] investment page date handling

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -18,6 +18,8 @@
 @import '../../vendor/almasaeed2010/adminlte/dist/css/skins/skin-blue.css';
 @import '../../vendor/almasaeed2010/adminlte/dist/css/skins/skin-red.css';
 
+// Date picker
+@import '../../node_modules/vanillajs-datepicker/sass/datepicker';
 
 // Sidebar select fix
 .skin-blue .sidebar-form select {
