--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -16,7 +16,8 @@
 @import '../../vendor/almasaeed2010/adminlte/dist/css/skins/skin-red.css';
 
 // Date picker
-@import '../../node_modules/vanillajs-datepicker/sass/datepicker';
+//@import '../../node_modules/vanillajs-datepicker/sass/datepicker';
+@import '../../node_modules/vanillajs-datepicker/dist/css/datepicker-bs4';
 
 // Sidebar select fix
 .skin-blue .sidebar-form select {
