--- a/resources/sass/vendor.scss
+++ b/resources/sass/vendor.scss
@@ -18,3 +18,6 @@
 // Date picker
 //@import '../../node_modules/vanillajs-datepicker/sass/datepicker';
 @import '../../node_modules/vanillajs-datepicker/dist/css/datepicker-bs4';
+
+// Calendar
+@import 'v-calendar/dist/style.css';
