basic search function

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -47,3 +47,26 @@ td.dt-nowrap {
 table.dataTable td.activeIcon > i:not(.fa-spinner) {
     cursor: pointer;
 }
+
+/* Font Awesome Icons as bullet list for search result */
+ul.custom-fa-bullet-list {
+    list-style: none;
+}
+
+ul.search-result-list li {
+    margin: 5px 0;
+}
+
+ul.search-result-list li.active:before {
+    font-family: 'FontAwesome';
+    content: '\f111';
+    margin:0 5px 0 -15px;
+    color: #00a65a;
+}
+
+ul.search-result-list li.inactive:before {
+    font-family: 'FontAwesome';
+    content: '\f10c';
+    margin:0 5px 0 -15px;
+    color: #d33724;
+}
