[fix] quick view trigger

--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -23,15 +23,15 @@ td.dt-nowrap {
 }
 
 // Hide/show spinner for busy/idle button in DataTables
-table.dataTable button:not(.busy) i.fa-spinner {
+table button:not(.busy) i.fa-spinner {
     display: none;
 }
-table.dataTable button.busy i:not(.fa-spinner) {
+table button.busy i:not(.fa-spinner) {
     display: none;
 }
 
 /* Dynamic, clickable icons in DataTables */
-table.dataTable td.activeIcon > i:not(.fa-spinner) {
+table td.activeIcon > i:not(.fa-spinner) {
     cursor: pointer;
 }
 
