--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -80,7 +80,7 @@ ul.search-result-list li.inactive:before {
 
 // Workaround for dataTable scroll header space
 .dataTables_scrollHead .table {
-    margin-bottom: 0px !important;
+    margin-bottom: 0 !important;
 }
 
 // Sidebar form settings
