--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12504,15 +12504,17 @@ div.card-header > div.card-title {
   font-size: 1.15em;
 }
 
-.card-title.collapse-control * {
+.collapse-control, .collapse-control * {
   cursor: pointer;
 }
 
-.card-header .fa {
+.card-header .fa,
+.collapse-control .fa {
   transition: 0.3s transform ease-in-out;
 }
 
-.card-header .collapsed .fa {
+.card-header .collapsed .fa,
+.collapse-control.collapsed .fa {
   transform: rotate(-90deg);
 }
 
