improve transaction forms and displays

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -12412,6 +12412,10 @@ td.dt-nowrap {
   cursor: pointer;
 }
 
+.no-datatable-search .dataTables_filter {
+  display: none;
+}
+
 table button:not(.busy) i.fa-spinner {
   display: none;
 }
