[feature] entering a transaction does not allow schedule or budget flag

--- a/public/css/vendor.css
+++ b/public/css/vendor.css
@@ -1337,7 +1337,7 @@
 }
 
 .datepicker-cell.disabled {
-  color: #adb5bd;
+  color: rgba(33, 37, 41, 0.5);
 }
 
 .datepicker-cell.prev:not(.disabled),
