[other] NPM update

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -14,4 +14,4 @@ $enable-rtl: false; /* stylelint-disable-line scss/dollar-variable-default */
 
 //Select2
 @import 'select2/dist/css/select2';
-@import 'select2-bootstrap-5-theme/src/include-all';
+@import 'select2-bootstrap-5-theme/dist/select2-bootstrap-5-theme.css';
