fix: DataTables styling restructured

--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -269,8 +269,8 @@
 // $enable-important-utilities:        true !default;
 // $enable-contrast-ratio-correction:  true !default;
 // $enable-contrast-ratio-warnings:    false !default;
-// $enable-ltr:                        true !default;
-// $enable-rtl:                        false !default;
+$enable-ltr:                        true !default;
+$enable-rtl:                        false !default;
 
 // Set mobile breakpoint
 
