--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -1,9 +1,6 @@
 // Override some CoreUI variables
 @import "variables";
 
-$enable-ltr: true; /* stylelint-disable-line scss/dollar-variable-default */
-$enable-rtl: false; /* stylelint-disable-line scss/dollar-variable-default */
-
 // Import styles
 @import "@coreui/coreui/scss/coreui";
 
@@ -15,3 +12,22 @@ $enable-rtl: false; /* stylelint-disable-line scss/dollar-variable-default */
 //Select2
 @import 'select2/dist/css/select2';
 @import 'select2-bootstrap-5-theme/dist/select2-bootstrap-5-theme';
+
+// Fonts
+@import url('https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,400,600,700,300italic,400italic,600italic');
+
+// Datatables
+@import "~datatables.net-bs5/css/dataTables.bootstrap5.css";
+
+// Date picker
+@import '../../node_modules/vanillajs-datepicker/dist/css/datepicker-bs5.css';
+
+// Calendar
+@import 'v-calendar/dist/style.css';
+
+// Font Awesome
+$fa-font-path: '~@fortawesome/fontawesome-free/webfonts';
+@import '~@fortawesome/fontawesome-free/scss/fontawesome';
+@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '~@fortawesome/fontawesome-free/scss/regular';
+@import '~@fortawesome/fontawesome-free/scss/brands';
