--- a/resources/sass/_custom.scss
+++ b/resources/sass/_custom.scss
@@ -96,6 +96,11 @@ ul.search-result-list li.inactive:before {
     opacity: 1;
 }
 
+.sidebar-brand-form input::placeholder {
+    color: var(--cui-input-placeholder-color, #8a93a2);
+    opacity: 1;
+}
+
 .sidebar-brand-form select {
     option {
         color: black; // color of all the other options
